# Discord-Logger

./: .gitignore  LICENSE  README.md  pyproject.toml
src/discord_logger/: logging.py
src/discord_logging/: __init__.py  logging.py
